# Network_Device_Mapper

./: .env.example  .gitignore  README.md  build_app.sh  desktop.py  pyproject.toml  requirements-desktop.txt  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: ci.yml
assets/: icon.icns
backend/: __init__.py  desktop.py  discovery.py  history.py  mdns.py  notify.py  scheduler.py  server.py  snmp.py  topology.py  unifi.py  wol.py
docs/: tier1.md  tier2.md
frontend/: index.html
tests/: test_desktop.py  test_discovery_parsers.py  test_history.py  test_mdns.py  test_notify.py  test_parse_target.py  test_scheduler.py  test_server.py  test_snmp_parsers.py  test_wol.py
