[project]
name = "network-device-mapper"
version = "1.1.0"
description = "Scan your LAN, name the devices, and draw the topology."
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # long lines: docstrings/tables read better unwrapped
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]  # make `backend` importable under bare `pytest` (e.g. CI)
